[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toa_sp"
version = "1.0.0"
description = "Multi-strategy single-pulse TOA extraction from PSRFITS search-mode data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Songbo Zhang", email = "sbzhang@pmo.ac.cn"},
    {name = "Xuan Yang", email = "yangxuan@pmo.ac.cn"},
]
keywords = [
    "pulsar", "timing", "TOA", "single-pulse", "radio-astronomy",
    "PSRFITS", "FRB", "RRAT",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "astropy>=5.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
mcmc = ["emcee>=3.0"]
corner = ["corner>=2.0"]
all = ["emcee>=3.0", "corner>=2.0"]

[project.urls]
Homepage = "https://github.com/songqiii/toa_sp"
Repository = "https://github.com/songqiii/toa_sp"
Issues = "https://github.com/songqiii/toa_sp/issues"

[project.scripts]
toa_sp = "toa_sp:main"

[tool.setuptools]
py-modules = ["toa_sp"]
